Fix logo line height and team text alignment

--- a/css/common.css
+++ b/css/common.css
@@ -18,7 +18,7 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.17;
+  line-height: 1.33333333;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-decoration: none;
@@ -29,11 +29,7 @@
   color: var(--primary-brand-color);
 }
 
-.nav-list,
-.contacts-list,
-.features-list,
-.team-list,
-.portfolio-list {
+ul {
   list-style: none;
 }
 
