--- a/css/team.css
+++ b/css/team.css
@@ -22,6 +22,7 @@
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--dark-color);
+  text-align: center;
 }
 
 .team-text {
@@ -29,4 +30,5 @@
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
+  text-align: center;
 }
